--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,6 @@
 micronaut:
-  application:
-    name: bookinventory
-consul:
-  client:
-    registration:
-      enabled: true
-    defaultZone: "${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}"
+  server:
+    port: 8082
 #consul:
 #  client:
 #    registration:
